# OpenCampus

./: .gitignore  OpenCampus2024.md  Opencampus2024.md  README.md  run.sh  run1.sh  run2.sh
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: Opencampus2024.md  RL_server.py  demotime.csv  demotime.py  requirements.txt
src/SoftActorCritic/: Model.py  ReplayMemory.py  SAC.py
src/TrainLog/SACTrainDual_240711_0/delta_size_10-10-05_dekoboko00-12/240715_022240/: config.yaml
src/TrainLog/SACTrainDualplus_240710_0/delta_size_10-10-05_dekoboko00-12/240711_015231/: config.yaml
src/TrainLog/SACTrainDualplus_240710_0/delta_size_10-10-05_dekoboko00-12/240715_014032/: config.yaml
src/TrainLog/SACTrain_240705_0/Backward_03_08/240708_145445/: config.yaml
src/TrainLog/SACTrain_240705_0/Left_03_08/240705_204533/: config.yaml
src/TrainLog/SACTrain_240705_0/Right_03_08/240705_204631/: config.yaml
src/TrainLog/SACTrain_240705_0/Step_omega_10_45/240705_205004/: config.yaml
src/TrainLog/SACTrain_240705_0/TurnLeftForward_03_08_00_05/240705_204039/: config.yaml
src/TrainLog/SACTrain_240705_0/TurnLeft_03_08/240705_203739/: config.yaml
src/TrainLog/SACTrain_240705_0/TurnRightForward_03_08_00_05/240708_144959/: config.yaml
src/TrainLog/SACTrain_240705_0/TurnRight_03_08/240705_203910/: config.yaml
src/TrainLog/SACTrain_240705_0/curriculum_forward_00_05/240711_020103/: config.yaml
src/TrainLog/SACTrain_240705_0/forward_00_05/240708_144207/: config.yaml
src/unitree_legged_sdk/: CMakeLists.txt
src/unitree_legged_sdk/code/: cpg.cpp
